def/force-app/main/default/objects/Detailhotelbillitems__c/Detailhotelbillitems__c.object-meta.xml
<CustomObject>
    <label>Detailhotelbillitems</label>
    <nameField>
        <label>DetailhotelbillitemsName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detailhotelbillitems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>