def/force-app/main/default/objects/Detailhotelbillitems__c/fields/billnumber__c.field-meta.xml
<CustomField>
    <fullName>billnumber__c</fullName>
    <label>billnumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>