def/force-app/main/default/objects/Detailhotelbillitems__c/fields/billvalue__c.field-meta.xml
<CustomField>
    <fullName>billvalue__c</fullName>
    <label>billvalue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>