def/force-app/main/default/objects/Detailhotelbillitems__c/fields/capitalcity__c.field-meta.xml
<CustomField>
    <fullName>capitalcity__c</fullName>
    <label>capitalcity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cochin</fullName>
            </value>
            <value>
                <fullName>mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>