def/force-app/main/default/objects/Detailhotelbillitems__c/fields/Masterhotelbill__c.field-meta.xml
<CustomField>
    <fullName>Masterhotelbill__c</fullName>
    <label>Masterhotelbill</label>
    <referenceTo>Masterhotelbill__c</referenceTo>
    <relationshipLabel>Detailhotelbillitems</relationshipLabel>
    <relationshipName>Detailhotelbillitems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>