def/force-app/main/default/objects/Detailhotelbillitems__c/fields/parentstate__c.field-meta.xml
<CustomField>
    <fullName>parentstate__c</fullName>
    <label>parentstate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>maharashtra</fullName>
            </value>
            <value>
                <fullName>kerala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>