def/force-app/main/default/objects/Detailhotelbillitems__c/fields/testcross__c.field-meta.xml
<CustomField>
    <fullName>testcross__c</fullName>
    <formula>Masterhotelbill__r.Billtotals__c +999</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testcross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>