def/force-app/main/default/objects/Detailhotelbillitems__c/validationRules/testval.validationRule-meta.xml
<ValidationRule>
    <fullName>testval</fullName>
    <active>true</active>
    <errorConditionFormula>billvalue__c  &gt; 5000000</errorConditionFormula>
    <errorMessage>no allwed</errorMessage>
</ValidationRule>